form submission mobile fix

--- a/_assets/includes/media.css
+++ b/_assets/includes/media.css
@@ -1252,6 +1252,8 @@ and (max-width: 799px) {
         display: none;
     }
 
+
+
 }
 
 /* ================================================ 860 - 000 ======================================= */
@@ -1261,6 +1263,11 @@ and (max-width: 799px) {
     ul.mobile.tabs {
         display:none;
     }
+
+   #signup .signupform .da_block {
+    width: 100% !important;
+    margin: 0 auto;
+}
 
 }
 /* ================================================ 768 - 000 ======================================= */
